# cmake_study

./: CMakeLists.txt
include/: hello.h  world.h
src/: CMakeLists.txt  hello.cpp  main.cpp  world.cpp
